--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel ./src/*.html",
-    "predeploy": "rimraf -rf dist && parcel build ./src/*.html --public-url https://github.com/Jvldwin/kodex/",
+    "predeploy": "rimraf -rf dist && parcel build ./src/*.html --public-url https://raw.githubusercontent.com/Jvldwin/kodex/gh-pages",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
